--- a/search_api_postgresql.services.yml
+++ b/search_api_postgresql.services.yml
@@ -1,125 +1,143 @@
-parameters:
-  search_api_postgresql.embedding_cache:
-    table_name: 'search_api_postgresql_embedding_cache'
-    default_ttl: 604800  # 7 days
-    max_entries: 100000
-    cleanup_probability: 0.01
-    cleanup_threshold: 0.9
-    enable_compression: true
-
 services:
-  # Analytics service
-  search_api_postgresql.analytics:
-    class: Drupal\search_api_postgresql\Service\EmbeddingAnalyticsService
-    arguments: 
-      - '@database'
-      - '@entity_type.manager'
-      - '@config.factory'
+  # Core Services
+  logger.channel.search_api_postgresql:
+    parent: logger.channel_base
+    arguments: ['search_api_postgresql']
+
+  # PostgreSQL Connector Factory
+  search_api_postgresql.connector_factory:
+    class: Drupal\search_api_postgresql\PostgreSQL\PostgreSQLConnectorFactory
+    arguments:
       - '@logger.channel.search_api_postgresql'
 
-  # Configuration validation service
-  search_api_postgresql.configuration_validator:
-    class: Drupal\search_api_postgresql\Service\ConfigurationValidationService
-    arguments: 
-      - '@entity_type.manager'
+  # Field Mapper Service
+  search_api_postgresql.field_mapper:
+    class: Drupal\search_api_postgresql\PostgreSQL\FieldMapper
+    arguments:
+      - '@logger.channel.search_api_postgresql'
+
+  # Embedding Services
+  search_api_postgresql.embedding_service.azure:
+    class: Drupal\search_api_postgresql\Service\AzureOpenAIEmbeddingService
+    arguments:
+      - '@config.factory'
       - '@key.repository'
       - '@logger.channel.search_api_postgresql'
+      - '@http_client'
+    tags:
+      - { name: search_api_postgresql_embedding_service, id: azure_openai }
+
+  search_api_postgresql.embedding_service.openai:
+    class: Drupal\search_api_postgresql\Service\OpenAIEmbeddingService
+    arguments:
+      - '@config.factory'
+      - '@key.repository'
+      - '@logger.channel.search_api_postgresql'
+      - '@http_client'
+    tags:
+      - { name: search_api_postgresql_embedding_service, id: openai }
 
   # Embedding Cache Services
-  search_api_postgresql.embedding_cache.database:
+  search_api_postgresql.embedding_cache:
     class: Drupal\search_api_postgresql\Cache\DatabaseEmbeddingCache
-    arguments: 
+    arguments:
       - '@database'
       - '@logger.channel.search_api_postgresql'
-      - '%search_api_postgresql.embedding_cache%'
-    tags:
-      - { name: 'search_api_postgresql.embedding_cache' }
+      - '@config.factory'
 
-  search_api_postgresql.embedding_cache.memory:
-    class: Drupal\search_api_postgresql\Cache\MemoryEmbeddingCache
-    arguments: 
-      - '@logger.channel.search_api_postgresql'
-      - '%search_api_postgresql.embedding_cache%'
-    tags:
-      - { name: 'search_api_postgresql.embedding_cache' }
-
-  # Default embedding cache service (alias to database cache)
-  search_api_postgresql.embedding_cache:
-    alias: search_api_postgresql.embedding_cache.database
-    public: true
-
-  # Cache manager service for advanced cache operations
   search_api_postgresql.cache_manager:
     class: Drupal\search_api_postgresql\Cache\EmbeddingCacheManager
     arguments:
       - '@search_api_postgresql.embedding_cache'
       - '@logger.channel.search_api_postgresql'
-      - '@config.factory'
 
-  # Queue Services
+  # Queue Management
   search_api_postgresql.embedding_queue_manager:
     class: Drupal\search_api_postgresql\Queue\EmbeddingQueueManager
     arguments:
       - '@queue'
-      - '@logger.channel.search_api_postgresql'
-      - '@config.factory'
-    public: true
-    tags:
-      - { name: 'search_api_postgresql.queue_manager' }
-
-  # Queue-aware embedding service wrapper
-  search_api_postgresql.queued_embedding_service:
-    class: Drupal\search_api_postgresql\Service\QueuedEmbeddingService
-    arguments:
-      - '@search_api_postgresql.embedding_queue_manager'
-      - '@logger.channel.search_api_postgresql'
-      - '@config.factory'
-    tags:
-      - { name: 'search_api_postgresql.embedding_service' }
-
-  # Circuit breaker service
-  search_api_postgresql.circuit_breaker:
-    class: Drupal\search_api_postgresql\Service\CircuitBreakerService
-    arguments:
       - '@state'
       - '@logger.channel.search_api_postgresql'
       - '@config.factory'
 
-  # Error recovery service
-  search_api_postgresql.error_recovery:
-    class: Drupal\search_api_postgresql\Service\ErrorRecoveryService
+  # Circuit Breaker Service
+  search_api_postgresql.circuit_breaker:
+    class: Drupal\search_api_postgresql\CircuitBreaker\CircuitBreaker
     arguments:
-      - '@search_api_postgresql.circuit_breaker'
-      - '@queue'
-      - '@logger.channel.search_api_postgresql'
-      - '@config.factory'
-
-  # Error classification service
-  search_api_postgresql.error_classification:
-    class: Drupal\search_api_postgresql\Service\ErrorClassificationService
-    arguments:
+      - 'search_api_postgresql'
+      - '@state'
+      - '@cache.default'
       - '@logger.channel.search_api_postgresql'
 
-  # Degradation message service
-  search_api_postgresql.degradation_messages:
-    class: Drupal\search_api_postgresql\Service\EnhancedDegradationMessageService
+  # Analytics and Monitoring
+  search_api_postgresql.analytics:
+    class: Drupal\search_api_postgresql\Service\EmbeddingAnalyticsService
     arguments:
-      - '@string_translation'
+      - '@database'
+      - '@state'
+      - '@datetime.time'
+      - '@logger.channel.search_api_postgresql'
+
+  # Configuration Validation
+  search_api_postgresql.configuration_validator:
+    class: Drupal\search_api_postgresql\Service\ConfigurationValidationService
+    arguments:
+      - '@entity_type.manager'
+      - '@key.repository'
+      - '@logger.channel.search_api_postgresql'
+
+  # Form Services
+  search_api_postgresql.form.embedding_management:
+    class: Drupal\search_api_postgresql\Form\EmbeddingManagementForm
+    arguments:
+      - '@entity_type.manager'
+      - '@search_api_postgresql.embedding_queue_manager'
+      - '@search_api_postgresql.analytics'
+
+  search_api_postgresql.form.bulk_regenerate:
+    class: Drupal\search_api_postgresql\Form\BulkRegenerateForm
+    arguments:
+      - '@entity_type.manager'
+      - '@batch.builder'
+      - '@search_api_postgresql.embedding_queue_manager'
+
+  search_api_postgresql.form.cache_management:
+    class: Drupal\search_api_postgresql\Form\CacheManagementForm
+    arguments:
       - '@config.factory'
+      - '@search_api_postgresql.cache_manager'
+      - '@search_api_postgresql.analytics'
 
-  # Logger channel
-  logger.channel.search_api_postgresql:
-    parent: logger.channel_base
-    arguments: ['search_api_postgresql']
+  search_api_postgresql.form.queue_management:
+    class: Drupal\search_api_postgresql\Form\QueueManagementForm
+    arguments:
+      - '@search_api_postgresql.embedding_queue_manager'
+      - '@search_api_postgresql.analytics'
 
-  # drush commands
-  search_api_postgresql.commands:
-    class: Drupal\search_api_postgresql\Commands\SearchApiPostgreSQLCommands
+  # Admin Controller
+  search_api_postgresql.admin_controller:
+    class: Drupal\search_api_postgresql\Controller\EmbeddingAdminController
     arguments:
       - '@entity_type.manager'
       - '@search_api_postgresql.analytics'
       - '@search_api_postgresql.configuration_validator'
       - '@search_api_postgresql.cache_manager'
       - '@search_api_postgresql.embedding_queue_manager'
+
+  # Drush Commands
+  search_api_postgresql.commands:
+    class: Drupal\search_api_postgresql\Commands\SearchApiPostgreSQLCommands
+    arguments:
+      - '@entity_type.manager'
+      - '@search_api_postgresql.embedding_queue_manager'
+      - '@search_api_postgresql.cache_manager'
+      - '@search_api_postgresql.configuration_validator'
+      - '@logger.channel.search_api_postgresql'
     tags:
       - { name: drush.command }
+
+parameters:
+  search_api_postgresql.default_batch_size: 50
+  search_api_postgresql.max_retries: 3
+  search_api_postgresql.cache_ttl: 604800 # 7 days
+  search_api_postgresql.queue_lease_time: 3600 # 1 hour
