--- a/search_api_postgresql.services.yml
+++ b/search_api_postgresql.services.yml
@@ -8,38 +8,48 @@ services:
   search_api_postgresql.connector:
     class: Drupal\search_api_postgresql\PostgreSQL\PostgreSQLConnector
     arguments:
+      - [] # config - set dynamically
       - '@logger.channel.search_api_postgresql'
 
   search_api_postgresql.field_mapper:
     class: Drupal\search_api_postgresql\PostgreSQL\FieldMapper
     arguments:
-      - '@logger.channel.search_api_postgresql'
+      - [] # config - set dynamically
 
   # Embedding Services
+  # AzureOpenAIEmbeddingService expects 8 parameters in the extended version
   search_api_postgresql.embedding_service.azure_openai:
     class: Drupal\search_api_postgresql\Service\AzureOpenAIEmbeddingService
     arguments:
       - '' # endpoint - set dynamically
       - '' # api_key - set dynamically
       - '' # deployment_name - set dynamically
-      - [] # config - set dynamically
-      - '@http_client'
-      - '@logger.channel.search_api_postgresql'
+      - '2024-02-01' # api_version
+      - 1536 # dimension
+      - 3 # max_retries
+      - 1000 # retry_delay
+      - null # cache_manager - optional
 
+  # OpenAIEmbeddingService expects 9 parameters
   search_api_postgresql.embedding_service.openai:
     class: Drupal\search_api_postgresql\Service\OpenAIEmbeddingService
     arguments:
       - '' # api_key - set dynamically
-      - 'text-embedding-ada-002' # model
-      - '@http_client'
-      - '@logger.channel.search_api_postgresql'
+      - 'text-embedding-3-small' # model
+      - null # dimension
+      - 3 # max_retries
+      - 1000 # retry_delay
+      - null # cache_manager
+      - null # organization_id
+      - 30 # timeout
+      - 'https://api.openai.com/v1/embeddings'
 
-  # Queue Management - FIXED
+  # Queue Management
   search_api_postgresql.embedding_queue_manager:
     class: Drupal\search_api_postgresql\Queue\EmbeddingQueueManager
     arguments:
       - '@queue'
-      - '@logger.channel.search_api_postgresql' 
+      - '@logger.channel.search_api_postgresql'
       - '@config.factory'
 
   # Queued Embedding Service
@@ -51,14 +61,7 @@ services:
       - '@config.factory'
 
   # Cache Management
-  search_api_postgresql.cache_manager:
-    class: Drupal\search_api_postgresql\Cache\EmbeddingCacheManager
-    arguments:
-      - '@database'
-      - '@cache.default'
-      - '@config.factory'
-      - '@logger.channel.search_api_postgresql'
-
+  # First, define the cache implementations
   search_api_postgresql.database_cache:
     class: Drupal\search_api_postgresql\Cache\DatabaseEmbeddingCache
     arguments:
@@ -69,14 +72,24 @@ services:
   search_api_postgresql.memory_cache:
     class: Drupal\search_api_postgresql\Cache\MemoryEmbeddingCache
     arguments:
+      - '@logger.channel.search_api_postgresql'
       - [] # config - set dynamically
+
+  # Then define the cache manager using the database cache implementation
+  search_api_postgresql.cache_manager:
+    class: Drupal\search_api_postgresql\Cache\EmbeddingCacheManager
+    arguments:
+      - '@search_api_postgresql.database_cache'
+      - '@logger.channel.search_api_postgresql'
+      - '@config.factory'
 
   # Analytics and Monitoring
   search_api_postgresql.analytics:
     class: Drupal\search_api_postgresql\Service\EmbeddingAnalyticsService
     arguments:
       - '@database'
-      - '@datetime.time'
+      - '@entity_type.manager'
+      - '@config.factory'
       - '@logger.channel.search_api_postgresql'
 
   search_api_postgresql.cost_calculator:
@@ -92,14 +105,17 @@ services:
       - '@key.repository'
       - '@logger.channel.search_api_postgresql'
 
-  # Error Handling
+  # Error Handling - FIXED: ErrorRecoveryService expects 5 arguments
   search_api_postgresql.error_recovery:
     class: Drupal\search_api_postgresql\Service\ErrorRecoveryService
     arguments:
+      - '@database'
+      - '@cache.default'
+      - '@queue'
+      - '@config.factory'
       - '@logger.channel.search_api_postgresql'
-      - '@state'
-      - '@datetime.time'
 
+  # ErrorClassificationService - no constructor parameters
   search_api_postgresql.error_classification:
     class: Drupal\search_api_postgresql\Service\ErrorClassificationService
 
@@ -108,18 +124,18 @@ services:
     arguments:
       - '@logger.channel.search_api_postgresql'
 
+  # CircuitBreakerService
   search_api_postgresql.circuit_breaker:
     class: Drupal\search_api_postgresql\Service\CircuitBreakerService
     arguments:
       - '@state'
-      - '@datetime.time'
+      - '@cache.default'
       - '@logger.channel.search_api_postgresql'
 
-  # Forms
+  # Forms - FIXED based on constructors
   search_api_postgresql.form.embedding_management:
     class: Drupal\search_api_postgresql\Form\EmbeddingManagementForm
     arguments:
-      - '@config.factory'
       - '@entity_type.manager'
       - '@search_api_postgresql.embedding_queue_manager'
       - '@search_api_postgresql.analytics'
